<resources>
    <string name="app_name">WearIt</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    //Inicio App
    <string name="donde_tu_outfit_inspira_tendencias">Donde tu Outfit inspira tendencias</string>
    <string name="registrate">Regístrate</string>
    <string name="iniciar_sesion">Iniciar sesión</string>

    <string name="Iniciar_sesion">Iniciar Sesion</string>
    <string name="hint_usuario_email">Usuario o Correo Electronico</string>
    <string name="hint_email">Correo Electronico</string>
    <string name="hint_contrasena">Contraseña</string>
    <string name="toggle_ver_contraseña">Mostrar/Ocultar Contraseña</string>
    <string name="o">o</string>
    <string name="iniciar_sesion_google">Iniciar sesión con Google</string>
    <string name="iniciar_sesion_facebook">Iniciar sesión con Facebook</string>
    <string name="nombre">Nombre</string>
    <string name="IntroduzcionDeDatos">Introduce los siguientes datos:</string>
    <string name="usuario">Usuario</string>
    <string name="leyPrivacidad">Acepta nuestra Política de Privacidad</string>
    <string name="Continuar">Continuar</string>
    <string name="day_night_icon_desc">Indicador de día o noche</string>
    <string name="weather_icon_desc">Indicador del clima</string>

    <string name="atras">Atrás</string>
    <string name="configuracion">Configuración</string>
    <string name="prendas">Prendas</string>
    <string name="colecciones">Colecciones</string>
    <string name="guardados">Guardados</string>
    <string name="me_gusta">Me gusta</string>
    <string name="avatar_desc">Foto de perfil del usuario</string>
    <string name="outfit_desc">Imagen de prenda o conjunto</string>
    <string name="usuario_ejemplo">Usuario Ejemplo</string>
    <string name="amante_moda">Amante de la moda</string>
    <string name="followers">Followers</string>
    <string name="outfits">Outfits</string>

    <string name="add_garment">Agregar Prenda</string>
    <string name="garment_size">Talla</string>
    <string name="garment_brand">Marca</string>
    <string name="garment_season">Temporada</string>
    <string name="garment_color">Color</string>
    <string name="garment_part">Parte</string>
    <string name="garment_style">Estilo</string>
    <string name="save_garment">Guardar</string>

    <string name="select_color">Seleccionar Color</string>
    <string name="garment_image">Imagen de la prenda</string>
    <string name="prendas_escaneadas">Prendas</string>
    <string name="menu_prenda">Menu</string>
    <string name="cambiar_foto_perfil">"Cambiar Foto "</string>
    <string name="guardar">Guardar</string>
    <string name="cerrar_sesion">Cerrar sesion</string>

</resources>